[gd_scene load_steps=19 format=3 uid="uid://de4uuseyx7ow2"]

[ext_resource type="Script" path="res://scripts/scene/dance3d.gd" id="1_tnr3l"]
[ext_resource type="Script" path="res://scripts/scene/dancer3d.gd" id="4_iy7ff"]
[ext_resource type="Material" uid="uid://cuibyl7rdbydt" path="res://materials/puppymaid_apron.tres" id="5_jy7p1"]
[ext_resource type="PackedScene" uid="uid://dmje4cdeul7h6" path="res://ui/meter.tscn" id="6_ej6wt"]
[ext_resource type="PackedScene" uid="uid://ch3k52glg52di" path="res://ui/scene_debug.tscn" id="6_mirw1"]
[ext_resource type="Material" uid="uid://dq5aejuyar440" path="res://materials/puppymaid_dress.tres" id="6_mmug8"]
[ext_resource type="Material" uid="uid://oj1n81iaa53v" path="res://materials/puppymaid_head.tres" id="9_5cxf2"]
[ext_resource type="Script" path="res://ui/facecam.gd" id="9_g1m4l"]
[ext_resource type="PackedScene" uid="uid://bxgjiuj133no4" path="res://models/cone.blend" id="9_o20bb"]
[ext_resource type="Material" uid="uid://bobpgmp87ofgi" path="res://materials/puppymaid_spotlight.tres" id="10_7n5k6"]
[ext_resource type="PackedScene" uid="uid://b16ng32i6osfh" path="res://ui/inputmatcher.tscn" id="10_nj680"]
[ext_resource type="Script" path="res://scripts/scene/platforms3d.gd" id="11_kbr0h"]
[ext_resource type="PackedScene" uid="uid://dnt5elcenc77k" path="res://models/dancestage.glb" id="12_dnr35"]
[ext_resource type="Material" uid="uid://dgv0ljluuaq1x" path="res://materials/starfield.tres" id="13_ej4fu"]
[ext_resource type="PackedScene" uid="uid://m13ywxgteamj" path="res://models/puppymaid.blend" id="14_atp33"]

[sub_resource type="BoxMesh" id="BoxMesh_mfuqr"]
material = ExtResource("5_jy7p1")
size = Vector3(1, 10, 5)

[sub_resource type="BoxMesh" id="BoxMesh_cem3k"]
material = ExtResource("5_jy7p1")
size = Vector3(6, 20, 6)

[sub_resource type="PlaneMesh" id="PlaneMesh_sc21h"]
lightmap_size_hint = Vector2i(102, 102)
material = ExtResource("13_ej4fu")
size = Vector2(200, 150)
subdivide_width = 32
subdivide_depth = 32

[node name="root" type="Node3D"]

[node name="dance3d" type="Node3D" parent="." node_paths=PackedStringArray("player1_meter_ref", "player2_meter_ref")]
script = ExtResource("1_tnr3l")
player1_meter_ref = NodePath("ui/meter/topvbox/topmargin/tophbox/Player1Meter")
player2_meter_ref = NodePath("ui/meter/topvbox/topmargin/tophbox/Player2Meter")

[node name="player1" type="Node3D" parent="dance3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15.9352, 0)
script = ExtResource("4_iy7ff")

[node name="model" parent="dance3d/player1" instance=ExtResource("14_atp33")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.28939, 0)

[node name="body" parent="dance3d/player1/model/Armature/Skeleton3D" index="0"]
surface_material_override/0 = ExtResource("5_jy7p1")
surface_material_override/1 = ExtResource("6_mmug8")
surface_material_override/2 = ExtResource("5_jy7p1")
surface_material_override/3 = ExtResource("5_jy7p1")
surface_material_override/4 = ExtResource("6_mmug8")
surface_material_override/5 = ExtResource("9_5cxf2")
surface_material_override/6 = ExtResource("6_mmug8")
surface_material_override/7 = ExtResource("6_mmug8")

[node name="facecamui" type="Control" parent="dance3d/player1"]
visible = false
z_index = 3
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = 150.0
offset_top = 186.0
offset_right = 454.0
offset_bottom = 445.0

[node name="vbox" type="VBoxContainer" parent="dance3d/player1/facecamui"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 0
offset_right = 273.0
offset_bottom = 240.0

[node name="margin" type="MarginContainer" parent="dance3d/player1/facecamui/vbox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="facecam" type="SubViewportContainer" parent="dance3d/player1/facecamui/vbox/margin"]
custom_minimum_size = Vector2(96, 128)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
stretch = true

[node name="viewport" type="SubViewport" parent="dance3d/player1/facecamui/vbox/margin/facecam"]
handle_input_locally = false
size = Vector2i(96, 128)
render_target_update_mode = 0

[node name="facecam" type="Camera3D" parent="dance3d/player1/facecamui/vbox/margin/facecam/viewport" node_paths=PackedStringArray("follow_target")]
transform = Transform3D(1, 0, 0, 0, 0.982376, 0.186918, 0, -0.186918, 0.982376, 0, 11.5655, 7.71146)
projection = 2
near = 1.0
far = 15.0
script = ExtResource("9_g1m4l")
follow_target = NodePath("../../../../../../facecam_loc")

[node name="text" type="RichTextLabel" parent="dance3d/player1/facecamui/vbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "placeholder text
line 2
line 3
line 4"
scroll_active = false

[node name="facecam_loc" type="Camera3D" parent="dance3d/player1"]
transform = Transform3D(1, 0, 0, 0, 0.982376, 0.186918, 0, -0.186918, 0.982376, 0, 0.772844, 7.71146)
projection = 2
near = 1.0
far = 15.0

[node name="player2" type="Node3D" parent="dance3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 14.2863, 11, 0)
script = ExtResource("4_iy7ff")

[node name="model" type="MeshInstance3D" parent="dance3d/player2"]
mesh = SubResource("BoxMesh_mfuqr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="dance3d/player2/model"]

[node name="facecamui" type="Control" parent="dance3d/player2"]
visible = false
z_index = 3
z_as_relative = false
layout_mode = 3
anchors_preset = 0
offset_left = 700.0
offset_top = 186.0
offset_right = 1004.0
offset_bottom = 445.0

[node name="vbox" type="VBoxContainer" parent="dance3d/player2/facecamui"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 0
offset_right = 273.0
offset_bottom = 240.0

[node name="margin" type="MarginContainer" parent="dance3d/player2/facecamui/vbox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="facecam" type="SubViewportContainer" parent="dance3d/player2/facecamui/vbox/margin"]
custom_minimum_size = Vector2(96, 128)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
stretch = true

[node name="viewport" type="SubViewport" parent="dance3d/player2/facecamui/vbox/margin/facecam"]
handle_input_locally = false
size = Vector2i(96, 128)
render_target_update_mode = 0

[node name="facecam" type="Camera3D" parent="dance3d/player2/facecamui/vbox/margin/facecam/viewport" node_paths=PackedStringArray("follow_target")]
transform = Transform3D(1, 0, 0, 0, 0.982376, 0.186918, 0, -0.186918, 0.982376, 14.2161, 6.457, 7.711)
projection = 2
near = 1.0
far = 15.0
script = ExtResource("9_g1m4l")
follow_target = NodePath("../../../../../../facecam_loc")

[node name="text" type="RichTextLabel" parent="dance3d/player2/facecamui/vbox"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "placeholder text
line 2
line 3
line 4"
scroll_active = false

[node name="facecam_loc" type="Camera3D" parent="dance3d/player2"]
transform = Transform3D(1, 0, 0, 0, 0.982376, 0.186918, 0, -0.186918, 0.982376, 0, 6.45737, 7.71146)
projection = 2
near = 1.0
far = 15.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="dance3d"]

[node name="frontcam" type="Camera3D" parent="dance3d"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 11.7676, 27.1204)
current = true
fov = 78.2
size = 23.469
near = 7.749

[node name="ui" type="Node" parent="dance3d"]

[node name="meter" parent="dance3d/ui" instance=ExtResource("6_ej6wt")]

[node name="SceneDebug" parent="dance3d/ui" instance=ExtResource("6_mirw1")]
visible = false

[node name="inputmatcher" parent="dance3d/ui" instance=ExtResource("10_nj680")]

[node name="platforms" parent="dance3d" instance=ExtResource("12_dnr35")]
transform = Transform3D(6, 0, 0, 0, 6, 0, 0, 0, 6, 0, 0, 0)
script = ExtResource("11_kbr0h")

[node name="platform_standard" type="MeshInstance3D" parent="dance3d/platforms"]
transform = Transform3D(0.166667, 0, 0, 0, 0.166667, 0, 0, 0, 0.166667, -2.50852, 0.931277, 0.546775)
visible = false
mesh = SubResource("BoxMesh_cem3k")
skeleton = NodePath("../..")

[node name="ambient_lights" type="Node3D" parent="dance3d/platforms"]
transform = Transform3D(0.166667, 0, 0, 0, 0.166667, 0, 0, 0, 0.166667, 0, 1.71125, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="dance3d/platforms/ambient_lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 15, 0)
light_energy = 6.0
omni_range = 24.675
omni_attenuation = 0.0

[node name="OmniLight3D2" type="OmniLight3D" parent="dance3d/platforms/ambient_lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -12, 15, 0)
light_energy = 6.0
omni_range = 24.675
omni_attenuation = 0.0

[node name="OmniLight3D3" type="OmniLight3D" parent="dance3d/platforms/ambient_lights"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, 0)
light_energy = 6.0
omni_range = 24.675
omni_attenuation = 0.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="dance3d/platforms/ambient_lights"]
transform = Transform3D(0.999998, 0, 0, 0, 0.999995, -0.0026354, 0, 0.0026354, 0.999995, 0, -6.42146, 14.3452)

[node name="spotlight" parent="dance3d/platforms" instance=ExtResource("9_o20bb")]
transform = Transform3D(0.633333, 0, 0, 0, 1.40069, 0, 0, 0, 0.633333, -0.536006, 2.23992, 0)

[node name="Cone" parent="dance3d/platforms/spotlight" index="0"]
surface_material_override/0 = ExtResource("10_7n5k6")

[node name="background" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.90735e-06, -54.2928)
mesh = SubResource("PlaneMesh_sc21h")

[editable path="dance3d/player1/model"]
[editable path="dance3d/platforms/spotlight"]
